fix: channel section mobile layout

--- a/src/components/UI/VideoListSection/video-list-section.module.scss
+++ b/src/components/UI/VideoListSection/video-list-section.module.scss
@@ -34,6 +34,10 @@
 }
 
 @include mixins.media-mobile {
+  .container {
+  margin-bottom: 6.5rem;
+  }
+
   .top-block-container {
     display: none;
   }
