--- a/src/components/UI/VideosList/videos-list.module.scss
+++ b/src/components/UI/VideosList/videos-list.module.scss
@@ -5,7 +5,6 @@
   display: flex;
   align-self: center;
   gap: 4rem;
-  max-width: max-content;
 }
 
 .vertical-list {
