--- a/src/pages/ChannelPage/Recommendations/recommendations.module.scss
+++ b/src/pages/ChannelPage/Recommendations/recommendations.module.scss
@@ -3,7 +3,7 @@
 
 .recommendations {
   position: absolute;
-  top: 41.2rem;
+  top: 0;
   right: 19rem;
 
   display: flex;
